--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.neo4j.example</groupId>
+    <groupId>org.aaron.neo4j</groupId>
     <artifactId>neo4j-movies</artifactId>
     <version>3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Neo4j Movies Demo</name>
-    <description>Neo4j Movies Demo App</description>
-    <url>http://github.com/neo4j-examples/neo4j-movies-java-bolt</url>
+    <name>Neo4j Movies Explorer</name>
+    <description>Neo4j Movies Movies App</description>
     <properties>
         <neo4j.version>3.0.4</neo4j.version>
     </properties>
